initial commit after fork

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,40 @@
-*.o
-*.a
-.cache/
-.vs/
-.vscode/
-.DS_Store
-
-build/
-build-em/
-build-debug/
-build-release/
-build-static/
-build-no-accel/
-build-sanitize-addr/
-build-sanitize-thread/
-
-models/*
-
-/main
-/quantize
-
-arm_neon.h
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
 compile_commands.json
+CTestTestfile.cmake
+_deps
+AutoReflectTest
+.vscode
+Source/*.generated.inl
+cache.txt
+
+.vs
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+*.proj.filters
+*.proj
+*.sln
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Ww][Ii][Nn]32/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
+# Add this line
+out/
